frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: task-frontend:1.3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
